[gd_scene load_steps=27 format=3 uid="uid://181spnr3m2rf"]

[ext_resource type="Texture2D" uid="uid://bmolhhigeorso" path="res://assets/pixramen-valley-asset-pack-v2/demon-bat/spritesheets/1x/demon-bat-flying.png" id="1_f2bij"]
[ext_resource type="Script" uid="uid://clbeg5u2yldcd" path="res://src/entity2d/demon_bat/demon_bat.gd" id="1_gf7tn"]
[ext_resource type="Texture2D" uid="uid://bujkf80bbj2pw" path="res://assets/pixramen-valley-asset-pack-v2/demon-bat/spritesheets/1x/demon-bat-bite.png" id="2_5iah6"]
[ext_resource type="Texture2D" uid="uid://dm60tbndqek8c" path="res://assets/pixramen-valley-asset-pack-v2/demon-bat/spritesheets/1x/demon-bat-death.png" id="3_1f3xe"]
[ext_resource type="Texture2D" uid="uid://gdh3kttso7vi" path="res://assets/pixramen-valley-asset-pack-v2/demon-bat/spritesheets/1x/demon-bat-fire-projectile.png" id="4_gf7tn"]
[ext_resource type="Texture2D" uid="uid://bvftdudqcdoto" path="res://assets/pixramen-valley-asset-pack-v2/demon-bat/spritesheets/1x/demon-bat-knockback.png" id="5_ier4g"]
[ext_resource type="PackedScene" uid="uid://cu433q364ihrh" path="res://src/components/hurtbox/hurtbox.tscn" id="7_7cahv"]
[ext_resource type="PackedScene" uid="uid://dh6bfxbddddmi" path="res://src/components/state_machine/state_machine.tscn" id="7_ier4g"]
[ext_resource type="PackedScene" uid="uid://cf0nvf6cru64j" path="res://src/components/hitbox/hitbox.tscn" id="7_uhy6p"]
[ext_resource type="PackedScene" uid="uid://df12b1321qav6" path="res://src/components/movement/floating_movement/floating_movement.tscn" id="9_i2djr"]
[ext_resource type="PackedScene" uid="uid://dh3yf0vjq6y7a" path="res://src/components/health/health_component.tscn" id="9_v2idi"]
[ext_resource type="PackedScene" uid="uid://ceo5ohakjun24" path="res://src/components/knockback/knockback_component.tscn" id="10_hvwbj"]
[ext_resource type="Script" uid="uid://hjwsy77lk2a0" path="res://src/entity2d/demon_bat/wait_state.gd" id="11_ofwsv"]
[ext_resource type="Script" uid="uid://cnon3qykay18p" path="res://src/entity2d/demon_bat/chase_state.gd" id="11_sa6p8"]
[ext_resource type="Script" uid="uid://352j672rwn5s" path="res://src/components/state_machine/states/wander_state.gd" id="11_y8pqu"]
[ext_resource type="Script" uid="uid://b06hgrj2hkj3c" path="res://src/entity2d/demon_bat/hit_state.gd" id="15_4vig0"]

[sub_resource type="CircleShape2D" id="CircleShape2D_1pbn3"]
radius = 6.0

[sub_resource type="Animation" id="Animation_bc8ra"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_f2bij")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Hitbox/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Hurtbox/CollisionShape2D:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_181f0"]
resource_name = "bite"
length = 1.4
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_5iah6")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [14]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Hitbox/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}

[sub_resource type="Animation" id="Animation_y8pqu"]
resource_name = "death"
length = 0.6
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_1f3xe")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [6]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}

[sub_resource type="Animation" id="Animation_nt67o"]
resource_name = "fire_projectile"
length = 0.5
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("4_gf7tn")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [5]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4]
}

[sub_resource type="Animation" id="Animation_ycy4p"]
resource_name = "flying"
length = 0.4
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_f2bij")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_i2djr"]
resource_name = "knockback"
length = 0.2
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("5_ier4g")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Hurtbox/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5iah6"]
_data = {
&"RESET": SubResource("Animation_bc8ra"),
&"bite": SubResource("Animation_181f0"),
&"death": SubResource("Animation_y8pqu"),
&"fire_projectile": SubResource("Animation_nt67o"),
&"flying": SubResource("Animation_ycy4p"),
&"knockback": SubResource("Animation_i2djr")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_v2idi"]
radius = 11.0454

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_7cahv"]
radius = 5.0
height = 24.0

[node name="DemonBat" type="CharacterBody2D" node_paths=PackedStringArray("flippable")]
collision_layer = 0
motion_mode = 1
script = ExtResource("1_gf7tn")
flippable = [NodePath("Sprite2D")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource("CircleShape2D_1pbn3")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_f2bij")
offset = Vector2(0, -6.5)
hframes = 4

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_5iah6")
}
autoplay = "flying"

[node name="Hurtbox" parent="." instance=ExtResource("7_7cahv")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
shape = SubResource("CircleShape2D_v2idi")

[node name="Hitbox" parent="." node_paths=PackedStringArray("character") instance=ExtResource("7_uhy6p")]
character = NodePath("..")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(6, 2)
shape = SubResource("CapsuleShape2D_7cahv")
disabled = true

[node name="HealthComponent" parent="." node_paths=PackedStringArray("hurtbox") instance=ExtResource("9_v2idi")]
max_health = 257
hurtbox = NodePath("../Hurtbox")

[node name="KnockbackComponent" parent="." node_paths=PackedStringArray("character", "hurtbox") instance=ExtResource("10_hvwbj")]
character = NodePath("..")
hurtbox = NodePath("../Hurtbox")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
path_postprocessing = 1

[node name="Movements" type="Node" parent="."]

[node name="HaltMovement" parent="Movements" node_paths=PackedStringArray("entity") instance=ExtResource("9_i2djr")]
acceleration = 200.0
deceleration = 200.0
entity = NodePath("../..")

[node name="WanderMovement" parent="Movements" node_paths=PackedStringArray("entity") instance=ExtResource("9_i2djr")]
max_speed = 25.0
acceleration = 10.0
deceleration = 10.0
entity = NodePath("../..")

[node name="ChaseMovement" parent="Movements" node_paths=PackedStringArray("entity") instance=ExtResource("9_i2djr")]
max_speed = 50.0
acceleration = 100.0
deceleration = 100.0
entity = NodePath("../..")

[node name="StateMachine" parent="." node_paths=PackedStringArray("entity", "animation_player", "init_state") instance=ExtResource("7_ier4g")]
unique_name_in_owner = true
entity = NodePath("..")
animation_player = NodePath("../AnimationPlayer")
init_state = NodePath("ChaseState")

[node name="WaitState" type="Node" parent="StateMachine" node_paths=PackedStringArray("movement", "transition_states")]
script = ExtResource("11_ofwsv")
movement = NodePath("../../Movements/HaltMovement")
min_wait_time = 0.5
max_wait_time = 5.0
animation_name = &"flying"
transition_states = [NodePath("../WanderState")]
metadata/_custom_type_script = "uid://dai8jwpq2uh3u"

[node name="WanderState" type="Node" parent="StateMachine" node_paths=PackedStringArray("movement")]
script = ExtResource("11_y8pqu")
movement = NodePath("../../Movements/WanderMovement")
max_wander_time = 5.0
animation_name = &"flying"
metadata/_custom_type_script = "uid://dai8jwpq2uh3u"

[node name="ChaseState" type="Node" parent="StateMachine" node_paths=PackedStringArray("movement", "navigation")]
script = ExtResource("11_sa6p8")
movement = NodePath("../../Movements/ChaseMovement")
navigation = NodePath("../../NavigationAgent2D")
animation_name = &"flying"

[node name="HitState" type="Node" parent="StateMachine" node_paths=PackedStringArray("movement", "transition_states")]
script = ExtResource("15_4vig0")
movement = NodePath("../../Movements/HaltMovement")
animation_name = &"knockback"
transition_states = [NodePath("../ChaseState"), NodePath("../WaitState")]
